--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
     <!-- CSS (load bootstrap) -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.12/angular-material.min.css">
     <style>
         .navbar { border-radius:0; }
     </style>
 
     <!-- JS (load angular, ui-router, and our custom js file) -->
-    <script src="http://code.angularjs.org/1.2.13/angular.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
+    <script src="http://code.angularjs.org/1.5.9/angular.min.js"></script>
+    <script src="http://code.angularjs.org/1.5.9/angular-animate.min.js"></script>
+    <script src="http://code.angularjs.org/1.5.9/angular-messages.min.js"></script>
+    <script src="http://code.angularjs.org/1.5.9/angular-aria.min.js"></script>
+   
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.12/angular-material.min.js"></script>
+
+    <script src="//unpkg.com/@uirouter/angularjs@1.0.7/release/angular-ui-router.min.js"></script>
     <script src="app.js"></script>
+    
 </head>
 
 <!-- apply our angular app to our site -->
